--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@ En proc \textit{chequearCopias}, en el aux \textit{porcentajeRespuestasIgualAdya
 
 \section{Especificacion}
 
-$Nota\ ES\ \Z$\\
+$Nota\ ES\ \R$\\
 $Respuesta\ ES\ \Z$\\
 $Examen\ ES\ \seq{Respuesta}$\\
 $Coordenada\ ES\ struct\struct{f:\Z, c:\Z}$\\
@@ -110,12 +110,12 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
 }
 
 % si c y f estan entre las dimensiones de aula la coordenada es valida 
-\predLargo{coordenadaValida}{c:Coordenada, a:Aula}{0 \leq c.f < \norm{a} \land 0 \leq c.c < \norm{a}}
-
-% La cantidad de estudiantes a lo sumo no hace que haya alumnos juntos
+\predLargo{coordenadaValida}{coord:Coordenada, a:Aula}{0 \leq coord.f < \norm{a} \land 0 \leq coord.c < \norm{a}}
+\\
 \predLargo{cantValidaEstudiantes}{a, c: \Z}{
-    (c \leq ifThenElse(mod(a,2)=0, \frac{a^ 2}{2}, \frac{a^ 2 + a}{2}))    
+    (0 \leq c \leq ifThenElse(mod(a,2)=0, \frac{a^ 2}{2}, \frac{a^ 2 + a}{2}))    
 }
+Chequea que la cantidad de estudiantes sea menor o igual a los que entran en el aula manteniendo la separación de al menos 1 asiento entre cada uno \\
 
 % el aula tiene misma cantidad de filas y columnas
 \predLargo{aulaCuadrada}{a: Aula}{
@@ -178,16 +178,16 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
         \existe{i}{\Z}{0\leq i < \norm{a1.examen}\yLuego \existe{a2}{alumno}{\\
         perteneceAlumno(a2, edr.aula)\ \yLuego\\
         (puedeCopiarse(a1.coord, a2.coord, edr.aula) \land\\
-        suExamen(a1.coord, edr.aula)[i] = "" \land\\
-        suExamen(a2.coord, edr.aula)[i] \neq "")}}\yLuego
-        (edr_0 = edr)
+        suExamen(a1.coord, edr.aula)[i] = -1 \land\\
+        suExamen(a2.coord, edr.aula)[i] \neq -1)}}\yLuego
+        \\(edr_0 = edr)
     }
     \aseguraLargo{
         \existe{i}{\Z}{0\leq i < \norm{a1.examen}\yLuego \existe{a2}{alumno}{\\
             perteneceAlumno(a2, edr_0.aula) \yLuego \\
             (puedeCopiarse(a1.coord, a2.coord, edr_0.aula)\land\\
-            suExamen(a1.coord, edr_0.aula)[i]= "" \land \\
-            suExamen(a2.coord, edr_0.aula)[i] \neq "" \land\\
+            suExamen(a1.coord, edr_0.aula)[i]= -1 \land \\
+            suExamen(a2.coord, edr_0.aula)[i] \neq -1 \land\\
             suExamen(a1.coord, edr.aula)[i] = suExamen(a2.coord, edr.aula)[i]\land\\
             mismosEjerciciosMenos(i, suExamen(a1.coord, edr.aula), a1.examen))\\
         }}\yLuego\\
